# Linea

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  compile_commands.json  imgui.ini  main.cpp  vanguard_log.txt
.github/workflows/: build.yml
config/: name.txt
core/: CMakeLists.txt  identity.cpp  identity.hpp
libs/libsodium/ARM64/Debug/v143/dynamic/: libsodium.exp  libsodium.ilk
libs/libsodium/ARM64/Release/v143/dynamic/: libsodium.exp
libs/libsodium/Win32/Debug/v142/dynamic/: libsodium.ilk
libs/libsodium/Win32/Debug/v143/dynamic/: libsodium.exp  libsodium.ilk
libs/libsodium/x64/Debug/v142/dynamic/: libsodium.ilk
libs/libsodium/x64/Debug/v143/dynamic/: libsodium.ilk
net/: CMakeLists.txt  peer.cpp  peer.hpp  reliable.cpp  reliable.hpp  socket.cpp  socket.hpp
src/: main.rs
storage/: CMakeLists.txt  message.cpp  message.hpp  messages.cpp  messages.hpp
transport/: CMakeLists.txt  peer.cpp  peer.hpp  reliable.cpp  reliable.hpp
ui/: CMakeLists.txt  window.cpp  window.hpp
