[package]
name = "Linea"
version = "0.1.2"
edition = "2024"

[dependencies]
eframe = "0.34.2"
egui = "0.34.2"
egui_extras = { version = "0.34.2", features = ["image", "svg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"                                   # compress
aes-gcm = "0.10"                 # encryption, hell yeah
chrono = "0.4"                                 # Timestamps and such
tokio = { version = "1", features = ["full"] } # LAN magic
rand = "0.10.1"
